--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   logger: ^1.1.0
   palette_generator: ^0.3.3+2
   sizer: ^2.0.15
+  image: ^3.2.2
+  flutter_svg: ^1.1.6
 
 dev_dependencies:
   flutter_test:
@@ -29,6 +31,7 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
+    - assets/
     - assets/palates/
     # fonts:
     #   - family: Schyler
