--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   sizer: ^2.0.15
   image: ^3.2.2
   flutter_svg: ^1.1.6
+  image_picker: ^0.8.6
 
 dev_dependencies:
   flutter_test:
