--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ dependencies:
   image: ^3.2.2
   flutter_svg: ^1.1.6
   image_picker: ^0.8.6
+  auto_animated: ^3.1.0
+  flutter_staggered_grid_view: ^0.6.2
+  measure_size: ^4.0.0
 
 dev_dependencies:
   flutter_test:
@@ -34,14 +37,9 @@ flutter:
   assets:
     - assets/
     - assets/palates/
-    # fonts:
-    #   - family: Schyler
-    #     fonts:
-    #       - asset: fonts/Schyler-Regular.ttf
-    #       - asset: fonts/Schyler-Italic.ttf
-    #         style: italic
-    #   - family: Trajan Pro
-    #     fonts:
-    #       - asset: fonts/TrajanPro.ttf
-    #       - asset: fonts/TrajanPro_Bold.ttf
-    #         weight: 700
+#     fonts:
+#       - family: Google Sans
+#         fonts:
+#           - asset: assets/fonts/Schyler-Regular.ttf
+#           - asset: fonts/Schyler-Italic.ttf
+#             style: italic
