--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   auto_animated: ^3.1.0
   flutter_staggered_grid_view: ^0.6.2
   measure_size: ^4.0.0
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
